k8s/moodle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: docker.io/lthub/moodle:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: moodledata
              mountPath: /moodledata
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /login/index.php
              port: 80
            initialDelaySeconds: 180
            periodSeconds: 20
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /login/index.php
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 30
            failureThreshold: 5
      volumes:
        - name: moodledata
          persistentVolumeClaim:
            claimName: moodle-data-pvc
